[package]
name = "paperboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.23"

# We can add a name, if not it uses package.name as a fallback
[lib]
path = "src/lib.rs"

# Double brackets means an array in TOML
# We can have mutliple binaries but only one library per project
# To have multiple libraries, look into workspaces
[[bin]]
path = "src/main.rs"
name = "paperboy"
